--- a/Common/DeroyalBank.Model.csproj
+++ b/Common/DeroyalBank.Model.csproj
@@ -48,5 +48,6 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
